[GTK][WPE] Avif decoder build broken https://bugs.webkit.org/show_bug.cgi?id=224232

Patch by Philippe Normand <pnormand@igalia.com> on 2021-04-13
Reviewed by Carlos Garcia Campos.

.:

* Source/cmake/OptionsGTK.cmake: Require 0.9.0 due to avifIO usage in the decoder.

Source/WebCore:

libavif 0.9.0 introduces an API break. avifDecoderParse() no
longer takes the image data as input. Instead, an avifIO object
needs to be associated with an avifDecoder and the avifDecoder
calls the read() method of the avifIO object to read image data
incrementally.

* platform/image-decoders/avif/AVIFImageReader.cpp:
(WebCore::AVIFImageReader::parseHeader):
(WebCore::AVIFImageReader::decodeFrame):

Canonical link: https://commits.webkit.org/236445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275880 268f45cc-cd09-0410-ab3c-d52691b4dbfc